// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders correctly 1`] = `
<DocumentFragment>
  .cache-1pbu3dg {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.cache-mmq153 {
  border: 0;
  border-bottom-width: 1px;
  border-color: #d4dae7;
  border-style: solid;
}

.cache-10bpldg {
  color: #4a4f62;
}

.cache-10bpldg a {
  color: inherit;
}

.cache-10bpldg tr:nth-of-type(even) {
  background-color: #fafafb;
}

.cache-10bpldg:hover {
  color: #4f0599;
}

.cache-10bpldg:hover td:first-of-type {
  font-weight: 500;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-10bpldg [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.cache-10bpldg:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.cache-1f6fkt {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.cache-30dau7 {
  overflow: hidden;
  white-space: nowrap;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

<table
    class="efhaznt5 cache-1pbu3dg e7ah3bn0"
  >
    <thead
      class="efhaznt4 cache-mmq153 e7ah3bn0"
    >
      <tr
        class="efhaznt3 cache-10bpldg e7ah3bn0"
      >
        <th
          class="efhaznt2 cache-1f6fkt e7ah3bn0"
        >
          ID
        </th>
        <th
          class="efhaznt2 cache-1f6fkt e7ah3bn0"
        >
          Status
        </th>
        <th
          class="efhaznt2 cache-1f6fkt e7ah3bn0"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody
      class="cache-11djngs e7ah3bn0"
    >
      <tr
        class="efhaznt3 cache-10bpldg e7ah3bn0"
      >
        <td
          class="efhaznt1 cache-30dau7 e7ah3bn0"
        >
          165
        </td>
        <td
          class="efhaznt1 cache-30dau7 e7ah3bn0"
        >
          Ongoing
        </td>
        <td
          class="efhaznt1 cache-30dau7 e7ah3bn0"
        >
          Yesterday
        </td>
      </tr>
      <tr
        class="efhaznt3 cache-10bpldg e7ah3bn0"
      >
        <td
          class="efhaznt1 cache-30dau7 e7ah3bn0"
        >
          56
        </td>
        <td
          class="efhaznt1 cache-30dau7 e7ah3bn0"
        >
          Resolved
        </td>
        <td
          class="efhaznt1 cache-30dau7 e7ah3bn0"
        >
          1 hour ago
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Table renders correctly while loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1pbu3dg {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.cache-mmq153 {
  border: 0;
  border-bottom-width: 1px;
  border-color: #d4dae7;
  border-style: solid;
}

.cache-10bpldg {
  color: #4a4f62;
}

.cache-10bpldg a {
  color: inherit;
}

.cache-10bpldg tr:nth-of-type(even) {
  background-color: #fafafb;
}

.cache-10bpldg:hover {
  color: #4f0599;
}

.cache-10bpldg:hover td:first-of-type {
  font-weight: 500;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-10bpldg [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.cache-10bpldg:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.cache-1f6fkt {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.cache-oeudqs {
  overflow: hidden;
  white-space: nowrap;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.cache-oeudqs.cache-oeudqs {
  height: 80px;
  position: relative;
}

.cache-wywcx4 {
  position: absolute;
  top: 16px;
  left: 50%;
}

.cache-11dz2rd {
  width: 100%;
  vertical-align: center;
  height: 40px;
  width: 40px;
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-107dm90 {
  fill-opacity: 0;
  stroke-linecap: round;
  stroke-dasharray: 263.89378290154264px 263.89378290154264px;
  stroke-dashoffset: 0px;
  stroke: #d4dae7;
}

.cache-1iofvh8 {
  fill-opacity: 0;
  stroke-linecap: round;
  stroke-dasharray: 263.89378290154264px 263.89378290154264px;
  stroke-dashoffset: 211.11502632123413px;
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
  stroke: #4f0599;
}

<table
    class="efhaznt5 cache-1pbu3dg e7ah3bn0"
  >
    <thead
      class="efhaznt4 cache-mmq153 e7ah3bn0"
    >
      <tr
        class="efhaznt3 cache-10bpldg e7ah3bn0"
      >
        <th
          class="efhaznt2 cache-1f6fkt e7ah3bn0"
        >
          ID
        </th>
        <th
          class="efhaznt2 cache-1f6fkt e7ah3bn0"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody
      class="cache-11djngs e7ah3bn0"
    >
      <tr
        class="efhaznt3 cache-10bpldg e7ah3bn0"
      >
        <td
          class="efhaznt1 cache-oeudqs e7ah3bn0"
          colspan="2"
        >
          <div
            class="efhaznt0 cache-wywcx4 e7ah3bn0"
          >
            <svg
              aria-label="Loading"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="20"
              aria-valuetext="20%"
              class="cache-11dz2rd e7dhm9i4"
              role="progressbar"
              size="40"
              viewBox="0 0 100 100"
            >
              <path
                class="cache-107dm90 e7dhm9i2"
                d="M 50,50 m 0,-42 a 42,42 0 1 1 0,84 a 42,42 0 1 1 0,-84"
                stroke-width="16"
              />
              <path
                class="cache-1iofvh8 e7dhm9i1"
                d="M 50,50 m 0,-42 a 42,42 0 1 1 0,84 a 42,42 0 1 1 0,-84"
                stroke-width="16"
              />
            </svg>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
